--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,7 @@ sftp-config.json
 debug.sh
 diginode-installer-BACKUP-2021-10-08.sh
 test.sh
-./DS_Store
-DS_Store
+.DS_Store
 images/.DS_Store
 docs/.DS_Store
 motd/.DS_Store
